init(fix-some-shit): Fix things.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -24,5 +24,14 @@
     "permissions": [
         "tabs",
         "downloads"
-    ]
+    ],
+    "commands": {
+        "toggle-highlight-content": {
+            "suggested_key": {
+                "default": "Ctrl+Shift+Space",
+                "mac": "Command+Shift+Space"
+            },
+            "description": "Toggle Highlight Content"
+        }
+    }
 }
