chore: add context menu item

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -23,7 +23,8 @@
     },
     "permissions": [
         "tabs",
-        "downloads"
+        "downloads",
+        "contextMenus"
     ],
     "commands": {
         "toggle-highlight-content": {
