--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -38,5 +38,8 @@
             },
             "description": "Toggle Highlight Content"
         }
-    }
+    },
+    "web_accessible_resources": [
+        "images/cursor.png"
+    ]
 }
