--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gogh-gradient": "^0.0.1",
     "jszip": "^3.6.0",
     "mime-types": "^2.1.31",
-    "uuid-by-string": "^3.0.4"
+    "super-base-64": "^0.0.3",
+    "uuid": "^8.3.2"
   }
 }
