--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mime-types": "^2.1.31",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "super-base-64": "^0.0.3",
     "uuid": "^8.3.2"
   }
