--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^10.1.1",
     "super-base-64": "^0.0.3",
     "uuid": "^8.3.2"
   }
