feat: use offscreen page

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -33,7 +33,8 @@
         "contextMenus",
         "cookies",
         "webRequest",
-        "storage"
+        "storage",
+        "offscreen"
     ],
     "commands": {
         "toggle-highlight-content": {
