--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "gogh-gradient": "^0.0.1",
     "jszip": "^3.10.1",
+    "luxon": "^3.5.0",
     "mime-types": "^2.1.35",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
